--- a/WeatherApp/WeatherApp.Android/WeatherApp.Android.csproj
+++ b/WeatherApp/WeatherApp.Android/WeatherApp.Android.csproj
@@ -114,5 +114,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\cloudcover.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pressureicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
